# Hardware-in-the-Loop

./: .gitignore  .gitmodules  Makefile  README.md
apps/hil-go/: .dockerignore  Dockerfile.gateway  README.gateway.md  app.go  docker-compose.gateway.yml  go.mod  main.go  wails.json
apps/hil-gui-tauri/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/hil-gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/hil-gui-tauri/src-tauri/capabilities/: default.json
apps/hil-gui-tauri/src-tauri/src/: main.rs  protocol.rs  state.rs  udp.rs
docs/: PETALINUX_GUIDE.md  README_PETALINUX.md  architecture.md
extras/: TIM.ipynb
extras/Simulation/: 2_Project1.ipynb  3_NPC_Mod.ipynb  LCL_Model.ipynb  LCL_Model.m  ModelValidation.slx  ModelValidation.slxc  NPC_PWM.txt  Project1.ipynb  lcapy.ipynb
scripts/: README.md  deploy_board.sh  rebase_clean.sh  serial_connect.sh  ssh_board.sh
scripts/setup/: install_petalinux_deps.sh
scripts/test/: udp_receiver.py
scripts/vivado/: jtag_reset.sh
src/embedded/: README.md  udp_sender.py
src/ps_app/: Makefile  README.md  dma_telem.c  dma_telem.h  gpio.c  gpio.h  main.c  telemetry.c  telemetry.h  test_fpga.c  vf_ctrl.c  vf_ctrl.h
src/rtl/: HIL_AXI_Top.vhd  HIL_Regs_AXI.vhd  SerialManager.vhd  TIM_Solver.vhd  Top_HIL.vhd  Top_HIL_Zynq.vhd
src/tb/: BilienarSolverUnit_DSP_Sim.vhd  BilienarSolverUnit_DSP_behavior.vhd  BilinearSolverUnit_TestArch.vhd  StateSolver_tb.vhd  StateSpaceSolver_tb.vhd  StateSpaceSolver_tb.wcfg  Top_HIL_tb.vhd  tb_BSU_StubVsIP.vhd  (+5 more)
syn/: .gitignore  HIL.xpr
(+186 files in other folders)
