[package]
name = "hil-gui-tauri"
version = "0.1.0"
description = "HIL desktop GUI"
authors = ["Uriel Contardi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.5"
tauri = { version = "2", features = [] }
thiserror = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
